--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,8 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
     - name: Build PR
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git checkout -b pom-snapshot-updt
         date >> file.txt
