--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,12 +17,14 @@ jobs:
       run: |
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git config --global user.name "github-actions[bot]"
+        echo "BRANCH=pom-snapshot-updt" >> $GITHUB_ENV
     - name: Build PR
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        git checkout -b pom-snapshot-updt
+        git checkout -b $BRANCH
         date >> file.txt
         git add .
         git commit -m "Update pom SNAPSHOT version" -m "A release just completed, this PR increments the SNAPSHOT version in pom.xml" --signoff
+        git push --set-upstream origin $BRANCH --force
         gh pr create --fill
