--- a/.github/workflows/zap-vs-owasp-benchmark.yml
+++ b/.github/workflows/zap-vs-owasp-benchmark.yml
@@ -56,9 +56,10 @@ jobs:
 
           # Update the index to be sure git is aware of changes
           git update-index -q --refresh
-          
+          git diff 2>&1 > adiff
           echo "\`\`\`diff" >> $GITHUB_STEP_SUMMARY
-          echo $(git diff) >> $GITHUB_STEP_SUMMARY
+          echo fred >> #GITHUB_STEP_SUMMARY
+          cat adiff >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
           
           ## If there are changes: comment, commit, PR
