--- a/.github/workflows/zap-vs-owasp-benchmark.yml
+++ b/.github/workflows/zap-vs-owasp-benchmark.yml
@@ -34,12 +34,15 @@ jobs:
           # git remote set-url origin https://$GITHUB_USER:$GITHUB_TOKEN@github.com/$GITHUB_USER/zaproxy-website.git
           git remote add upstream https://github.com/zaproxy/zaproxy-website.git
           git checkout -B owasp-benchmark
-          git pull upstream main
+          git fetch upstream
+          git merge upstream/main
           git reset --hard upstream/main
           # git push --set-upstream origin owasp-benchmark --force
 
       - name: Scan OWASP Benchmark
         run: |
+          pwd
+          ls
           cd zap-mgmt-scripts/scans/benchmark
           mkdir results
           sections=( "cmdi" )
@@ -49,6 +52,8 @@ jobs:
               -cmd -silent -config scanner.injectable=15 -autorun /zap/wrk/$s/af-plan.yaml
             cp results/$s.yaml ../../../zaproxy-website/site/data/scans/benchmark/
           done
+          ls results/
+          ls -l ../../../zaproxy-website/site/data/scans/benchmark/
 
       - name: Raise a PR on the website
         run: |
