--- a/.github/workflows/zap-vs-owasp-benchmark.yml
+++ b/.github/workflows/zap-vs-owasp-benchmark.yml
@@ -58,6 +58,7 @@ jobs:
       - name: Raise a PR on the website
         run: |
           cd zaproxy-website
+          git status
 
           # Update the index to be sure git is aware of changes
           git update-index -q --refresh
