--- a/.github/workflows/zap-vs-owasp-benchmark.yml
+++ b/.github/workflows/zap-vs-owasp-benchmark.yml
@@ -50,8 +50,8 @@ jobs:
           do
             docker run --network=host --user=root -v $(pwd):/zap/wrk/:rw ghcr.io/zaproxy/zaproxy:nightly zap.sh \
               -cmd -silent -config scanner.injectable=15 -autorun /zap/wrk/$s/af-plan.yaml
-            cp results/$s.yaml ../../../zaproxy-website/site/data/scans/benchmark/
-            cp results/$s.yml ../../../zaproxy-website/site/data/scans/benchmark/
+            cp results/$s.yaml ../../../zaproxy-website/site/data/scans/benchmark/ || true
+            cp results/$s.yml ../../../zaproxy-website/site/data/scans/benchmark/ || true
           done
           ls results/
           ls -l ../../../zaproxy-website/site/data/scans/benchmark/
