--- a/.github/workflows/zap-vs-owasp-benchmark.yml
+++ b/.github/workflows/zap-vs-owasp-benchmark.yml
@@ -26,7 +26,7 @@ jobs:
           export GITHUB_TOKEN=${{ secrets.ZAPBOT_TOKEN }}
           git config --global user.email "12745184+zapbot@users.noreply.github.com"
           git config --global user.name $GITHUB_USER
-          git clone https://github.com/$GITHUB_USER/zap-mgmt-scripts.git
+          git clone https://github.com/kingthorin/wf-test.git zap-mgmt-scripts
           git clone https://github.com/$GITHUB_USER/zaproxy-website.git
 
           # Update to the latest upstream
@@ -44,6 +44,7 @@ jobs:
           pwd
           ls
           cd zap-mgmt-scripts/scans/benchmark
+          ls -l
           mkdir results
           sections=( "cmdi" )
           for s in "${sections[@]}"
