--- a/.github/workflows/zap-vs-owasp-benchmark.yml
+++ b/.github/workflows/zap-vs-owasp-benchmark.yml
@@ -31,12 +31,12 @@ jobs:
 
           # Update to the latest upstream
           cd zaproxy-website
-          git remote set-url origin https://$GITHUB_USER:$GITHUB_TOKEN@github.com/$GITHUB_USER/zaproxy-website.git
+          # git remote set-url origin https://$GITHUB_USER:$GITHUB_TOKEN@github.com/$GITHUB_USER/zaproxy-website.git
           git remote add upstream https://github.com/zaproxy/zaproxy-website.git
           git checkout -B owasp-benchmark
-          git pull upstream main
+          git pull --quiet upstream main
           git reset --hard upstream/main
-          git push --set-upstream origin owasp-benchmark --force
+          # git push --set-upstream origin owasp-benchmark --force
 
       - name: Scan OWASP Benchmark
         run: |
