--- a/.github/workflows/zap-vs-owasp-benchmark.yml
+++ b/.github/workflows/zap-vs-owasp-benchmark.yml
@@ -57,13 +57,13 @@ jobs:
           # Update the index to be sure git is aware of changes
           git update-index -q --refresh
 
-          echo "\`\`\`yaml" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`diff" >> $GITHUB_STEP_SUMMARY
           echo $(git diff) >> $GITHUB_STEP_SUMMARY
           echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
           
           ## If there are changes: comment, commit, PR
-          # if ! git diff-index --quiet HEAD --; then
-
+          if ! git diff-index --quiet HEAD --; then
+            echo "Would PR"
             # git add site/data/scans/benchmark/*
             # git commit -s -m "Updated OWASP Benchmark Results"
             # git push origin
